Don't use namespace WebCore::XPath at global scope https://bugs.webkit.org/show_bug.cgi?id=231186

Patch by Alex Christensen <achristensen@webkit.org> on 2021-10-06
Reviewed by Sam Weinig.

It causes problems with unified builds, which get confused between WebCore::XPath::Function and WTF::Function.

* xml/XPathGrammar.cpp:
* xml/XPathGrammar.h:
* xml/XPathGrammar.y:
* xml/XPathParser.cpp:

Canonical link: https://commits.webkit.org/242586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283635 268f45cc-cd09-0410-ab3c-d52691b4dbfc