Source/WebCore/xml/XPathParser.cpp
@@ -37,8 +37,6 @@
 #include <wtf/StdLibExtras.h>
 #include <wtf/text/StringHash.h>
 
-using namespace WebCore::XPath;
-
 extern int xpathyyparse(WebCore::XPath::Parser&);
 
 #include "XPathGrammar.h"
