Source/WebCore/xml/XPathGrammar.y
@@ -58,15 +58,15 @@ using namespace XPath;
 %parse-param { Parser& parser }
 
 %union { 
-    NumericOp::Opcode numericOpcode; 
-    EqTestOp::Opcode equalityTestOpcode;
+    WebCore::XPath::NumericOp::Opcode numericOpcode;
+    WebCore::XPath::EqTestOp::Opcode equalityTestOpcode;
     StringImpl* string;
-    Step::Axis axis;
-    LocationPath* locationPath;
-    Step::NodeTest* nodeTest;
-    Vector<std::unique_ptr<Expression>>* expressionVector;
-    Step* step;
-    Expression* expression; 
+    WebCore::XPath::Step::Axis axis;
+    WebCore::XPath::LocationPath* locationPath;
+    WebCore::XPath::Step::NodeTest* nodeTest;
+    Vector<std::unique_ptr<WebCore::XPath::Expression>>* expressionVector;
+    WebCore::XPath::Step* step;
+    WebCore::XPath::Expression* expression;
 }
 %left <numericOpcode> MULOP
 
